<resources>
    <string name="app_name">AABao</string>
    <string name="my_main">我</string>
    <string name="my_mp">MP</string>
    <string name="my_start">START</string>
    <string name="my_expand">扩展</string>
    <string name="my_setting">设置</string>
    <string name="welcome_to_main">和我一起跑</string>
    <string name="login_use">立即登录</string>
    <string name="login_edit_use">编辑个人资料</string>
    <string name="settings">设置</string>
    <string name="about_jing_you_pao">关于静幽跑</string>
    <string name="settings_munch">更多</string>
    <string name="log_in">登陆</string>
    <string name="register_user">注册</string>
    <string name="register_this_user">确认注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="the_third_party_log_in">第三方登陆</string>
    <string name="import_is_mistake">请输入账号和密码</string>
    <string name="version_users">1</string>
    <string name="user_is_nothing">用户不存在或密码错误</string>
    <string name="user_is_exist">用户已存在</string>
    <string name="insert_db_failed">创建用户失败</string>
    <string name="bill_firse">账单一</string>
    <string name="today_spend">今日花费</string>
    <string name="average_spend">平均花费</string>
    <string name="note_spend">记一笔</string>
    <string name="is_case">今天还没有记过账</string>
    <string name="text_state_case">今日还没有花费</string>
    <string name="today_case">今天</string>
    <string name="this_week">本周</string>
    <string name="this_month">本月</string>
    <string name="this_year">本年</string>
    <string name="about_aabao">关于</string>
    <string name="pay_case">支出</string>
    <string name="income_case">收入</string>
    <string name="classify_note">分类</string>
    <string name="time">时间</string>
    <string name="storage_note">保存</string>
    <string name="remark_note">备注</string>
    <!--note分类 start-->
    <string name="food_drink">食物酒水</string>

        <string name="one_day_three">一日三餐</string>
        <string name="fruit_so_on">水果零食</string>

    <string name="go_go_lang">出去浪</string>
        <string name="sing_song">嗨歌</string>
        <string name="go_eat">聚餐</string>
        <string name="other">其他</string>

    <string name="property">居家物业</string>

        <string name="rent">房租</string>
        <string name="electric_charge">电费</string>
        <string name="net_lint">网线</string>
        <string name="daily_use">日常用品</string>
    <string name="import_money">请输入金额</string>
    <string name="by_user">花费者</string>
    <string name="sum_money">金额</string>
    <string name="settle_accounts">结算</string>
    <string name="has_no_account">还没有创建账单或刚算清</string>
    <string name="detail">详细</string>
    <string name="lately_case">最近花费:</string>
    <string name="lase_date">最后花费时间</string>
    <string name="yuan">元</string>
    <string name="caculate_complete">结算完成</string>
    <string name="give">给</string>
    <string name="cong">从</string>
    <string name="give_it">得到</string>

    <!--note分类 end-->
</resources>
