<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg"
        android:layout_marginTop="-100dp"/>

    <com.aabao.adnroid.fragment.layout.MainLayout
       android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/image_view"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linear_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bill_firse"
                        android:textSize="@dimen/setting_text"
                        android:layout_gravity="center"/>
                </FrameLayout>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/refresh"
                        android:layout_gravity="center"/>

                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/today_spend"
                        android:textSize="@dimen/setting_text"
                        android:layout_gravity="center"/>
                </FrameLayout>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/average_spend"
                        android:textSize="@dimen/setting_text"
                        android:layout_gravity="center"/>

                </FrameLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/text_today_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/note_spend"
                android:textSize="@dimen/setting_text"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:gravity="center"
                android:background="@drawable/context_selector"/>

            <com.aabao.adnroid.fragment.layout.MainListView
                android:id="@+id/list_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></com.aabao.adnroid.fragment.layout.MainListView>

        </LinearLayout>

    </com.aabao.adnroid.fragment.layout.MainLayout>


</RelativeLayout>
